Hide buttons in mx_EventTile_pre_container and show them on hover by default
Setting "visibility: hidden" to mx_EventTile_button can easily cause a regression. The declaration should be exclusively applied to buttons inside mx_EventTile_pre_container, and "visibility: visible" should be set to those buttons only.

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -572,7 +572,6 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
 
 .mx_EventTile_button {
     display: inline-block;
-    visibility: hidden;
     cursor: pointer;
 }
 
@@ -600,9 +599,7 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
 
     &:focus-within,
     &:hover {
-        .mx_EventTile_copyButton,
-        .mx_EventTile_collapseButton,
-        .mx_EventTile_expandButton {
+        .mx_EventTile_button {
             visibility: visible;
         }
     }
@@ -618,6 +615,7 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         right: 8px;
         width: 19px;
         height: 19px;
+        visibility: hidden;
         background-color: $message-action-bar-fg-color;
 
         &.mx_EventTile_buttonBottom {
