--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -510,18 +510,14 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         opacity: 1;
     }
 
-    &.mx_EventTile_e2eIcon_warning {
-        &::after {
-            mask-image: url('$(res)/img/e2e/warning.svg');
-            background-color: $alert;
-        }
+    &.mx_EventTile_e2eIcon_warning::after {
+        mask-image: url('$(res)/img/e2e/warning.svg');
+        background-color: $alert;
     }
 
-    &.mx_EventTile_e2eIcon_normal {
-        &::after {
-            mask-image: url('$(res)/img/e2e/normal.svg');
-            background-color: $header-panel-text-primary-color;
-        }
+    &.mx_EventTile_e2eIcon_normal::after {
+        mask-image: url('$(res)/img/e2e/normal.svg');
+        background-color: $header-panel-text-primary-color;
     }
 }
 
