--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -83,7 +83,7 @@ limitations under the License.
         }
 
         .mx_ThreadPanel_dropdown {
-            padding: 3px 4px 3px 8px;
+            padding: 3px $spacing-4 3px $spacing-8; // TODO: Use a spacing variable
             border-radius: 4px;
             line-height: 1.5;
             user-select: none;
