Variable on mx_BaseCard_Header
- Use a variable for margin of buttons on mx_BaseCard_header
- Reduce default margin instead of setting negative left and right values
- Set margin to span in order to ensure spacing between the back button and the span (6px: 30px - 24px)

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_BaseCard.scss
+++ b/res/css/views/right_panel/_BaseCard.scss
@@ -25,6 +25,8 @@ limitations under the License.
     flex: 1;
 
     .mx_BaseCard_header {
+        --BaseCard_header_button-margin: 12px;
+
         margin: 4px 0;
 
         > h2 {
@@ -36,12 +38,13 @@ limitations under the License.
             white-space: nowrap;
         }
 
-        .mx_BaseCard_back, .mx_BaseCard_close {
+        .mx_BaseCard_back,
+        .mx_BaseCard_close {
             position: absolute;
             background-color: rgba(141, 151, 165, 0.2);
             height: 20px;
             width: 20px;
-            margin: 12px;
+            margin: var(--BaseCard_header_button-margin);
             top: 0;
             border-radius: 50%;
 
