--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -23,7 +23,7 @@ limitations under the License.
     overflow: visible;
 
     .mx_BaseCard_header {
-        margin-bottom: 12px;
+        margin-bottom: $spacing-12;
 
         .mx_BaseCard_close,
         .mx_BaseCard_back {
