Replace padding with margin for an image and a file button for group layout on ThreadView
This normalizes inline spacing of image and file button on ThreadView.

The declarations of EventTile_mediaLine was added with 3a2aa9d, and they were expected to align the element with mx_EventTile_content. After the padding-right value for mx_EventTile_content was changed from 50px to 8px with 544957b, the declarations have been obsolete.

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -935,6 +935,13 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
             }
         }
 
+        .mx_MFileBody,
+        .mx_MImageBody {
+            display: block; // Apply margin to span element
+            margin-inline-start: var(--ThreadView_group_spacing-start);
+            margin-inline-end: var(--ThreadView_group_spacing-end);
+        }
+
         .mx_ReplyChain_wrapper {
             .mx_MLocationBody {
                 margin-inline-start: 0;
@@ -965,16 +972,9 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
                 }
             }
         }
-
-        .mx_EventTile_mediaLine {
-            padding-inline-start: var(--ThreadView_group_spacing-start);
-        }
     }
 
     .mx_EventTile_mediaLine {
-        padding-inline-start: var(--BaseCard_EventTile-spacing-horizontal);
-        padding-right: 50px;
-
         .mx_MImageBody {
             margin: 0;
             padding: 0;
